Offset map center to improve infowindow visibility.  Fix searchbar in smaller windows.  Clean up code.  Clean up navigation list display.

--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,41 @@
 #fslink {
-    color: #FF4719;
+    color: #ff4719;
 }
 
 #input {
     margin: 10px 0 5px 5px;
-    width: 195%;
+    width: 14em;
     height: 35px;
     font-size: 17px;
     font-family: helvetica, sans-serif;
-    color: #9D9D9D;
+    color: #9d9d9d;
     border: none;
-    -webkit-box-shadow: 2px 2px 5px #9D9D9D;
+    -webkit-box-shadow: 2px 2px 5px #9d9d9d;
     outline: none;
     position: absolute;
 }
-
+#search-bar {
+    position: fixed;
+    top:0;
+    z-index: 3;
+}
 #search-container {
     position: absolute;
     z-index: 3;
+    margin-top: 50px;
 }
 
 #search-nav {
     width: 230px;
-    max-height: 360px;
+    max-height: 250px;
     background-color: rgba(256,256,256,.8);
     overflow: scroll;
 }
 
 #scroller {
-    max-height: 360px;
+    max-height: 250px;
     overflow: scroll;
     margin: 0 5px;
-    padding-top: 45px;
-
 }
 
 #arrow {
@@ -43,6 +46,7 @@
 #arrow-container {
     background-color: rgba(256,256,256,.8);
     max-width: 45px;
+    top: 0;
 }
 
 
@@ -63,7 +67,7 @@
     float: right;
     margin: 0 10px 15px 0;
     border-radius: 10%;
-    background-color: #2E1F0F;
+    background-color: #2e1f0f;
     opacity: 0.9;
     font-size: 14px;
     color: white;
@@ -72,7 +76,7 @@
 
 #reset:hover {
     background-color: white;
-    color: #2E1F0F;
+    color: #2e1f0f;
     outline: none;
 }
 
